--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button mat-icon-button [matMenuTriggerFor]="menu">
+  <button mat-icon-button [matMenuTriggerFor]="menu" id="MenuButton">
     <mat-icon>Menu</mat-icon>
   </button>
 
@@ -9,6 +9,9 @@
     </button>
     <button mat-menu-item routerLink = "/addUser">
       <span>Add Task</span>
+    </button>
+    <button mat-menu-item routerLink="/listUsers">
+      <span>Search</span>
     </button>
   </mat-menu>
 </div>
